--- a/main.css
+++ b/main.css
@@ -1,47 +1,120 @@
-header {
-    width: 100%;
-    height: 60px;
-    background-color: red;
+/* Reset default styles */
+* {
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-header > div {
+/* Body styles */
+body {
+    background-color: #222;
+    color: #fff;
+}
+
+/* Header styles */
+header {
+    padding: 10px;
+    background-color: #111;
+}
+
+header div {
     display: flex;
-    flex-direction: row;
-    /* flex- */
-    justify-content: center;
     align-items: center;
-    gap: 10%;
+    justify-content: space-between;
 }
 
+#logo {
+    font-size: large;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 55%;
+}
+
+button {
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    background-color: #333;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    min-width: 60px;
+}
+
+button:hover {
+    background-color: #555;
+}
+
+#dimensions {
+    color: #ccc;
+}
+
+#dimensions span {
+    padding: 0 5px;
+}
+
+#dimensions input[type="number"] {
+    width: 70px;
+    padding: 6px;
+    border: none;
+    border-radius: 4px;
+    background-color: #333;
+    color: #ccc;
+    font-size: 14px;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
+
+#dimensions input[type="number"]:focus {
+    outline: none;
+    background-color: #555;
+}
+
+input[type=number] { 
+    -moz-appearance: textfield;
+    appearance: textfield;
+    margin: 0; 
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+      -webkit-appearance: none; 
+      margin: 0;
+}
+
+/* Main styles */
 main {
-    margin: 1vw auto;
-    width: 98vw;
-    height: 98vw;
+    padding: 20px;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
     display: grid;
-    gap: 5px;
-    grid-template-rows: repeat(5, minmax(20px, 1fr));
-    grid-template-columns: repeat(5, minmax(20px, 1fr));
-    height: 100%;
-    width: 100%;
+    grid-template-columns: repeat(5, 50px);
+    grid-gap: 10px;
 }
 
 .card {
-    height: 100%;
-    width: 100%;
-    background-color: lightgray;
+    height: 50px;
+    width: 50px;
+    background-color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    border: none;
     border-radius: 5px;
     user-select: none;
+}
 
+.card abbr {
+    text-decoration: none;
 }
 
 .card[data-color="1"] {
