--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ header div {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 10px;
 }
 
 #logo {
@@ -35,6 +36,7 @@ nav {
     justify-content: space-between;
 
     width: 55%;
+    max-width: 700px;
 }
 
 button {
